--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react-custom-radio": "^1.0.7",
     "react-dom": "^16.12.0",
     "react-feather": "^2.0.3",
+    "react-google-charts": "^3.0.15",
     "react-move": "^6.1.0",
     "react-native-vector-icons": "^6.6.0",
+    "react-progressbar": "^15.4.1",
     "react-scripts": "3.4.0",
     "react-simple-dropdown": "^3.2.3",
     "react-timeseries-charts": "^0.16.1",
