--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@trendmicro/react-sidenav": "^0.5.0",
+    "axios": "^0.19.2",
     "canvasjs": "^1.8.3",
     "material-ui-icons": "^1.0.0-beta.36",
     "pondjs": "^0.9.0",
@@ -30,6 +31,7 @@
     "react-scripts": "3.4.0",
     "react-simple-dropdown": "^3.2.3",
     "react-timeseries-charts": "^0.16.1",
+    "react-toastify": "^5.5.0",
     "react-vis": "^1.11.7",
     "recharts": "^2.0.0-beta.1",
     "styled-components": "^5.0.1"
